<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvLocationsByDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvLocationsByDistanceLabel"
        app:layout_constraintTop_toTopOf="@+id/tvLocationsByTime" />

    <TextView
        android:id="@+id/tvLocationsByDistanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locations_by_distance_label"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/tvLocationsByTimeLabel" />

    <TextView
        android:id="@+id/tvLocationsByTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLocationsByTimeLabel"
        app:layout_constraintStart_toStartOf="@+id/tvLocationsByTimeLabel" />

    <TextView
        android:id="@+id/tvLocationsByTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locations_by_time_label"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvLocationsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLocationCountLabel"
        app:layout_constraintStart_toStartOf="@+id/tvLocationCountLabel" />

    <TextView
        android:id="@+id/tvLocationCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locations_count_label"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLocationsByTimeLabel" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:text="@string/btn_start"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:text="@string/btn_stop"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textColor="@android:color/background_dark"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLocationsByTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="1dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/tvLocationsByTimeLabel"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLocationsByTime" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="1dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/tvLocationsByTimeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/tvLocationsByTime" />

</androidx.constraintlayout.widget.ConstraintLayout>