<resources>
    <string name="app_name">Place Tracker</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="tv_longitude_label">Longitude:</string>
    <string name="tv_latitude_label">Latitude:</string>
    <string name="tv_accuracy_label">Accuracy:</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Login</string>
    <string name="label_registration">Registration</string>
    <string name="label_login">Login</string>
    <string name="username_is_empty">Email must not be empty and contains "@"</string>
    <string name="password_too_short">Password must contains 6 or more literals</string>
    <string name="sign_in_or_registration_error">There is some Error. Try again</string>
    <string name="registration_success">The registration is success!</string>
    <string name="permission_denied">Permission is denied. Without it permission the application can`t work.</string>
    <string name="log_out">log_out</string>
    <string name="notification_title">Tracker is running</string>
    <string name="notification_text">Click to open tracker</string>
    <string name="empty"> </string>
    <string name="default_value">-</string>
    <string name="locations_by_distance_label">by distance</string>
    <string name="locations_by_time_label">by time</string>
    <string name="locations_count_label">count</string>
    <string name="default_time">0:00:00</string>

    <string name="no_locations">There are no locations. Run Place Tracker app for tracking your places</string>
    <string name="no_locations_in_database">There are no locations in database.</string>
    <string name="betweenSymbol">-</string>
    <string name="tv_date_description">Click to set date</string>
    <string name="btnShow">Show</string>
    <string name="dialog_message">Sign in</string>
    <string name="marker_title">Last location</string>
    <string name="timer_two_seconds">0:00:02</string>
    <string name="number_two">2</string>
    <string name="number_one">1</string>
    <string name="number_zero">0</string>
    <string name="password_for_tests">password</string>
    <string name="email_for_test">test@test.ua</string>
    <string name="not_exsisted_email_for_test">notExsistedUser@test.ua</string>

</resources>
