<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/design_default_color_background"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLoginFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login"
        android:background="@drawable/rounded_corners"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrationFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_registration"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFragment" />
</androidx.constraintlayout.widget.ConstraintLayout>