<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.u013_menu.MainActivity">
    <item
        android:icon="@drawable/log_out_white_icon"
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="always"/>

</menu>